@@ -1,3 +1,7 @@
+2009-11-04  Xavier Perseguers  <typo3@perseguers.ch>
+
+	* Updated ext_emconf.php's author and extension version dependencies
+
 2009-11-03  Xavier Perseguers  <typo3@perseguers.ch>
 
 	* Added some general unit tests (without any engine-specific test nor mapping)
